// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quick pick tab render tests renders the screen while refreshing 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <FlatList
    data={
      [
        {
          "picks": [
            {
              "assignedAssociate": "vn50pz4",
              "category": 3,
              "createTs": "2022-04-03T12:55:31.9633333Z",
              "createdBy": "Guude",
              "id": 1,
              "itemDesc": "generic description",
              "itemNbr": 1,
              "moveToFront": false,
              "palletId": "43",
              "palletLocationId": 4,
              "palletLocationName": "ABAR1-2",
              "quickPick": true,
              "salesFloorLocationId": 5,
              "salesFloorLocationName": "ABAR1-3",
              "status": "ready to bin",
              "upcNbr": "1234567890123",
            },
            {
              "assignedAssociate": "vn50pz4",
              "category": 3,
              "createTs": "2022-04-03T12:55:31.9633333Z",
              "createdBy": "Guude",
              "id": 2,
              "itemDesc": "generic description",
              "itemNbr": 1,
              "moveToFront": false,
              "palletId": "43",
              "palletLocationId": 4,
              "palletLocationName": "ABAR1-2",
              "quickPick": true,
              "salesFloorLocationId": 5,
              "salesFloorLocationName": "ABAR1-3",
              "status": "ready to pick",
              "upcNbr": "1234567890123",
            },
          ],
          "title": "[missing "en.PICKING.ASSIGNED_TO_ME" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.PICK" translation]",
        },
        {
          "picks": [
            {
              "assignedAssociate": "t0s0og",
              "category": 3,
              "createTs": "2022-04-03T12:55:31.9633333Z",
              "createdBy": "Guude",
              "id": 0,
              "itemDesc": "generic description",
              "itemNbr": 1,
              "moveToFront": false,
              "palletId": "43",
              "palletLocationId": 4,
              "palletLocationName": "ABAR1-2",
              "quickPick": true,
              "salesFloorLocationId": 5,
              "salesFloorLocationName": "ABAR1-3",
              "status": "ready to work",
              "upcNbr": "1234567890123",
            },
          ],
          "title": "[missing "en.PICKING.WORK" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.BIN" translation]",
        },
      ]
    }
    extraData={
      [
        {
          "assignedAssociate": "t0s0og",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 0,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": true,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to work",
          "upcNbr": "1234567890123",
        },
        {
          "assignedAssociate": "vn50pz4",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 1,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": true,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to bin",
          "upcNbr": "1234567890123",
        },
        {
          "assignedAssociate": "vn50pz4",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 2,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": true,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to pick",
          "upcNbr": "1234567890123",
        },
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[MockFunction]}
    refreshing={true}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#eaeaea",
        "marginTop": "auto",
        "padding": 7,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
        }
      }
    >
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`Quick pick tab render tests renders the screen with no picking items 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <FlatList
    data={
      [
        {
          "picks": [],
          "title": "[missing "en.PICKING.ASSIGNED_TO_ME" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.PICK" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.WORK" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.BIN" translation]",
        },
      ]
    }
    extraData={[]}
    keyExtractor={[Function]}
    onRefresh={[MockFunction]}
    refreshing={false}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#eaeaea",
        "marginTop": "auto",
        "padding": 7,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
        }
      }
    >
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`Quick pick tab render tests renders the screen with no picking items and manual scan true 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <ManualScanComponent
    keyboardType="numeric"
    placeholder="[missing "en.GENERICS.ENTER_UPC_ITEM_NBR" translation]"
  />
  <FlatList
    data={
      [
        {
          "picks": [],
          "title": "[missing "en.PICKING.ASSIGNED_TO_ME" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.PICK" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.WORK" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.BIN" translation]",
        },
      ]
    }
    extraData={[]}
    keyExtractor={[Function]}
    onRefresh={[MockFunction]}
    refreshing={false}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#eaeaea",
        "marginTop": "auto",
        "padding": 7,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
        }
      }
    >
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`Quick pick tab render tests renders the screen with not all items assigned to me 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <FlatList
    data={
      [
        {
          "picks": [
            {
              "assignedAssociate": "vn50pz4",
              "category": 3,
              "createTs": "2022-04-03T12:55:31.9633333Z",
              "createdBy": "Guude",
              "id": 1,
              "itemDesc": "generic description",
              "itemNbr": 1,
              "moveToFront": false,
              "palletId": "43",
              "palletLocationId": 4,
              "palletLocationName": "ABAR1-2",
              "quickPick": true,
              "salesFloorLocationId": 5,
              "salesFloorLocationName": "ABAR1-3",
              "status": "ready to bin",
              "upcNbr": "1234567890123",
            },
            {
              "assignedAssociate": "vn50pz4",
              "category": 3,
              "createTs": "2022-04-03T12:55:31.9633333Z",
              "createdBy": "Guude",
              "id": 2,
              "itemDesc": "generic description",
              "itemNbr": 1,
              "moveToFront": false,
              "palletId": "43",
              "palletLocationId": 4,
              "palletLocationName": "ABAR1-2",
              "quickPick": true,
              "salesFloorLocationId": 5,
              "salesFloorLocationName": "ABAR1-3",
              "status": "ready to pick",
              "upcNbr": "1234567890123",
            },
          ],
          "title": "[missing "en.PICKING.ASSIGNED_TO_ME" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.PICK" translation]",
        },
        {
          "picks": [
            {
              "assignedAssociate": "t0s0og",
              "category": 3,
              "createTs": "2022-04-03T12:55:31.9633333Z",
              "createdBy": "Guude",
              "id": 0,
              "itemDesc": "generic description",
              "itemNbr": 1,
              "moveToFront": false,
              "palletId": "43",
              "palletLocationId": 4,
              "palletLocationName": "ABAR1-2",
              "quickPick": true,
              "salesFloorLocationId": 5,
              "salesFloorLocationName": "ABAR1-3",
              "status": "ready to work",
              "upcNbr": "1234567890123",
            },
          ],
          "title": "[missing "en.PICKING.WORK" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.BIN" translation]",
        },
      ]
    }
    extraData={
      [
        {
          "assignedAssociate": "t0s0og",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 0,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": true,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to work",
          "upcNbr": "1234567890123",
        },
        {
          "assignedAssociate": "vn50pz4",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 1,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": true,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to bin",
          "upcNbr": "1234567890123",
        },
        {
          "assignedAssociate": "vn50pz4",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 2,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": true,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to pick",
          "upcNbr": "1234567890123",
        },
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[MockFunction]}
    refreshing={false}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#eaeaea",
        "marginTop": "auto",
        "padding": 7,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
        }
      }
    >
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`Quick pick tab render tests renders the screen with picking items all assigned to me 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <FlatList
    data={
      [
        {
          "picks": [
            {
              "assignedAssociate": "vn50pz4",
              "category": 3,
              "createTs": "2022-04-03T12:55:31.9633333Z",
              "createdBy": "Guude",
              "id": 0,
              "itemDesc": "generic description",
              "itemNbr": 1,
              "moveToFront": false,
              "palletId": "43",
              "palletLocationId": 4,
              "palletLocationName": "ABAR1-2",
              "quickPick": true,
              "salesFloorLocationId": 5,
              "salesFloorLocationName": "ABAR1-3",
              "status": "ready to work",
              "upcNbr": "1234567890123",
            },
            {
              "assignedAssociate": "vn50pz4",
              "category": 3,
              "createTs": "2022-04-03T12:55:31.9633333Z",
              "createdBy": "Guude",
              "id": 1,
              "itemDesc": "generic description",
              "itemNbr": 1,
              "moveToFront": false,
              "palletId": "43",
              "palletLocationId": 4,
              "palletLocationName": "ABAR1-2",
              "quickPick": true,
              "salesFloorLocationId": 5,
              "salesFloorLocationName": "ABAR1-3",
              "status": "ready to bin",
              "upcNbr": "1234567890123",
            },
            {
              "assignedAssociate": "vn50pz4",
              "category": 3,
              "createTs": "2022-04-03T12:55:31.9633333Z",
              "createdBy": "Guude",
              "id": 2,
              "itemDesc": "generic description",
              "itemNbr": 1,
              "moveToFront": false,
              "palletId": "43",
              "palletLocationId": 4,
              "palletLocationName": "ABAR1-2",
              "quickPick": true,
              "salesFloorLocationId": 5,
              "salesFloorLocationName": "ABAR1-3",
              "status": "ready to pick",
              "upcNbr": "1234567890123",
            },
          ],
          "title": "[missing "en.PICKING.ASSIGNED_TO_ME" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.PICK" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.WORK" translation]",
        },
        {
          "picks": [],
          "title": "[missing "en.PICKING.BIN" translation]",
        },
      ]
    }
    extraData={
      [
        {
          "assignedAssociate": "vn50pz4",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 0,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": true,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to work",
          "upcNbr": "1234567890123",
        },
        {
          "assignedAssociate": "vn50pz4",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 1,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": true,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to bin",
          "upcNbr": "1234567890123",
        },
        {
          "assignedAssociate": "vn50pz4",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 2,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": true,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to pick",
          "upcNbr": "1234567890123",
        },
      ]
    }
    keyExtractor={[Function]}
    onRefresh={[MockFunction]}
    refreshing={false}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#eaeaea",
        "marginTop": "auto",
        "padding": 7,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
        }
      }
    >
      [missing "en.PICKING.SCAN_ITEM_LABEL" translation]
    </Text>
  </View>
</RCTSafeAreaView>
`;
